05_12 Lista de categorias
Se crearon los siguientes archivos:
 - Categoria_row.java
 - MyAdapter.java
 - MyHolder.java
 - Categoria_row

Modificacion del MainActivity.java y el MainActivity.xml
 - Se ha creado un recycler y cardView

--- Se procede al cambio de nombres y la colocacion de todos ellos ---

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="statusTextView">Activo</string>
     <string name="title_activity__anunciante">Map</string>
     <string name="title_activity_anunciante">Map</string>
+    <string name="title">Title</string>
 </resources>
