13_12 Se ha vuelto a crear el ActivityAnuncio por un pproblema con el nombre Tambien se comprobo que funcionano el envio de datos desde la activity LAnuncios a Anuncios Cosas para hoy:  - Modificar el ActivityAnuncio para un diseño bonito y con los datos que traemos
Cosas extra
 - Modificar el MainActivity para mandar los datos y que se busquen por esa categoria

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="title_activity_anunciante">Map</string>
     <string name="title">Title</string>
     <string name="title_activity_acivity_anuncio">Map</string>
+    <string name="title_activity_anuncio">Map</string>
 </resources>
