Se han corregido algunos de los warnins

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,7 @@
     <string name="listaAnuncios">Anuncios</string>
     <string name="listaFavoritos">Favoritos</string>
 
+
+    <!--Errores -->
+    <string name="error18">Debes tener mas de 18 para usar esta aplicación</string>
 </resources>
