--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,4 +125,5 @@
     <string name="catNoAnuncios">Esta categoria no tiene anuncios todavia</string>
     <string name="noFavoritos">Todavia no tienes favoritos</string>
     <string name="errorObtenerDatosUsuario">Error al obtener los datos del usuario</string>
+    <string name="errorCargarCategoria">Error al cargar la categoria</string>
 </resources>
